# QPriceChecker

./: CMakeLists.txt  QPriceChecker.pro  README.md
i18n/: QPriceChecker_pt_BR.ts
src/: loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui
